# doxa

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/doxa/: __init__.py  argumentation.py  backup.py  opinion.py  sensitivity.py
tests/: test_argumentation.py  test_backup.py  test_opinion.py  test_opinion_allow_dogmatic_enforced.py  test_opinion_properties.py  test_packaging.py  test_sensitivity.py
