[project]
name = "doxa"
version = "0.1.0"
description = "A pure Subjective Logic library: Opinion, BetaEvidence, fusion operators"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ctoth" },
]
keywords = [
    "subjective-logic",
    "uncertainty",
    "belief-fusion",
    "opinion",
    "probabilistic-reasoning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ctoth/doxa"
Repository = "https://github.com/ctoth/doxa"
Issues = "https://github.com/ctoth/doxa/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doxa"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src/doxa",
    "/tests",
    "/uv.lock",
]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
